--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "next dev -p 5001",
     "lint": "eslint .",
-    "start": "next start"
+    "start": "next start -p 5001"
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.74",
